# advent-of-code-2025

./: .dockerignore  .gitignore  Dockerfile  README.md  build_docker.ps1  nginx.conf  renovate.json
.github/: FUNDING.yml
.github/workflows/: deploy.yml  docker-publish.yml
frontend/: angular.json  package.json  pnpm-lock.yaml  tsconfig.json
frontend/src/: index.html  styles.css
frontend/src/app/: app.css  app.html  app.ts
frontend/src/app/day/: day.css  day.html  day.ts
frontend/src/app/days/: days.css  days.html  days.ts
frontend/src/app/information/: information.css  information.html  information.ts
frontend/src/app/models/: day-config.ts
frontend/src/app/part/: part.css  part.html  part.ts
frontend/src/app/shared/: latex.pipe.ts
frontend/src/app/workers/: solution.worker.ts  worker.types.ts
rust-wasm/: Cargo.toml
rust-wasm/benches/: all_days.rs  wasm.rs
rust-wasm/inputs/: README.md
rust-wasm/src/: day_01.rs  day_02.rs  day_03.rs  day_04.rs  day_05.rs  day_06.rs  day_07.rs  day_08.rs  day_09.rs  day_10.rs  day_11.rs  day_12.rs  download_input.rs  lib.rs  main.rs
