[package]
name = "advent-of-code-2025"
version = "0.1.0"
edition = "2024"
authors = ["Meisterlala"]
description = "Advent of Code 2025 solutions in Rust with WASM support"


[dependencies]
# For WebAssembly support
wasm-bindgen = "0.2.105"

# For parsing the input
nom = "8.0.0"

# For numerical computations
ndarray = {version = "0.17.1", features = ["rayon"] }
ndarray-conv = "0.6.0"

# For parallel processing
rayon = "1.11.0"

# For input downloading in non-WASM contexts
reqwest = { version = "0.12", features = ["blocking"] }
dotenv = "0.15.0"

# use z3 solver on non wasm targets
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
z3 = { version = "0.19.6", features = ["bundled"] }

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
criterion = "0.8.0"

[[bench]]
name = "all_days"
harness = false

[[bin]]
name = "advent-of-code-2025"
path = "src/main.rs"
bench = false

[lib]
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"
bench = false

[profile.release]
opt-level = 3

[lints.clippy]
perf = "warn"
style = "warn"

