[package]
name = "advent-of-code-2025"
version = "0.1.0"
edition = "2024"
authors = ["Meisterlala"]
description = "Advent of Code 2025 solutions in Rust with WASM support"
repository = "https://github.com/Meisterlala/advent-of-code-2025"

[features]
default = ["good_lp"]
good_lp = ["dep:good_lp"]
z3 = ["dep:z3"]

[dependencies]
# For WebAssembly support
wasm-bindgen = "0.2.105"

# For parsing the input
nom = "8.0.0"

# For numerical computations
ndarray = {version = "0.17.1", features = ["rayon"] }
ndarray-conv = "0.6.0"

# For parallel processing
rayon = "1.11.0"

# For graph algorithms
petgraph = { version = "0.8.3", features = ["rayon"] }

# For input downloading in non-WASM contexts
reqwest = { version = "0.12", features = ["blocking"] }
dotenv = "0.15.0"

# Linea programming solver
good_lp = { version = "1.14.1", features = ["microlp"], default-features = false, optional = true }

# Optional Z3 solver
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
z3 = { version = "0.19.6", features = ["bundled"] , optional = true }

# Criterion for benchmarking, disable Rayon in WASM builds
[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
criterion = "0.8.0"
[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
criterion = {version = "0.8.0", default-features = false }

[dev-dependencies]
wasm-bindgen-test = "0.3.56"

[[bench]]
name = "all_days"
harness = false
[[bench]]
name = "wasm"
harness = false

[[bin]]
name = "advent-of-code-2025"
path = "src/main.rs"
bench = false

[lib]
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"
bench = false

[profile.release]
opt-level = 3

[lints.clippy]
perf = "warn"
style = "warn"

